# compare-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/compare/: SKILL.md
.compare/: config.example.json
.github/workflows/: publish.yml
compare_mcp/: __init__.py  __main__.py  config.py  debate.py  diff.py  models.py  server.py  store.py
tests/: test_config.py  test_diff.py  test_store.py
